# wakili

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/wakili_backend/: Cargo.toml  wakili_backend.did
src/wakili_backend/src/: lib.rs
src/wakili_frontend/: index.html  index.js  package.json  vite.config.js
src/wakili_frontend/src/: App.jsx
