[package]
name = "wakili_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.72"
thiserror = "1.0"
regex = "1.9"
getrandom = { version = "0.2", features = ["custom"] }

[dependencies.ic-cdk-timers]
version = "0.7"
optional = true